Add module dependencies