@@ -133,7 +133,14 @@ configure(javaProjects) {
   test {
     if(JavaVersion.current().isJava9Compatible()) {
       jvmArgs('--add-opens', 'java.base/java.lang=ALL-UNNAMED')
+      jvmArgs('--add-opens', 'java.base/java.lang.reflect=ALL-UNNAMED')
       jvmArgs('--add-opens', 'java.base/java.lang.invoke=ALL-UNNAMED')
+      jvmArgs('--add-opens', 'java.base/java.math=ALL-UNNAMED')
+      jvmArgs('--add-opens', 'java.base/java.net=ALL-UNNAMED')
+      jvmArgs('--add-opens', 'java.base/java.nio=ALL-UNNAMED')
+      jvmArgs('--add-opens', 'java.base/java.util=ALL-UNNAMED')
+      jvmArgs('--add-opens', 'java.base/java.util.stream=ALL-UNNAMED')
+      jvmArgs('--add-opens', 'java.base/java.io=ALL-UNNAMED')
       jvmArgs('--add-opens', 'java.xml/jdk.xml.internal=ALL-UNNAMED')
     }
 
